main.scss
/* ... */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Muli', sans-serif;
}

nav {
  z-index: 2;
  width: 100%;
  position: fixed;
  top: 0;
  color: white;
  display: flex;
  justify-content: space-evenly;

  .logo {
    h1 {
      font-size: 2.5rem;

      span {
        color: $primary-color;

      }
    }
  }

  ul {
    i {
      color: rgba(0, 0, 0, 0);
    }

    list-style: none;
    display: flex;

    li {
      padding: 1rem;

      a {
        font-size: 1.6rem;
        text-decoration: none;
        color: white;
        padding: 0 1.2rem;
        display: inline-block;
        position: relative;
        transition: all 0.5s;


        &::before {
          content: '';
          width: 10px;
          height: 10px;
          position: absolute;
          top: 0;
          left: 0;
          opacity: 0;
          border-left: 5px solid $primary-color;

          border-top: 5px solid $primary-color;
          transition: all 0.5s;

        }

        &::after {
          content: '';
          width: 10px;
          height: 10px;
          position: absolute;
          bottom: 0;
          right: 0;
          opacity: 0;
          border-bottom: 5px solid $primary-color;
          border-right: 5px solid $primary-color;
          transition: all 0.5s;

        }

        &:hover {
          transform: scale(1.1);

          &::before,
          &::after {
            opacity: 1;
          }
        }
      }
    }
  }

  .burger {
    display: none;
  }

  .burger div {
    width: 25px;
    height: 5px;
    background: white;
    margin: 5px;
  }
}

.book {
  text-decoration: none;
  color: black;
  padding: 1rem;
  background: $primary-color;
  font-size: 1.5rem;
  border-radius: 0.25rem;
  margin-top: 1rem;
  position: relative;
  z-index: 1;
  transition: all 0.5s;
  overflow: hidden !important;
  display: inline-block;

  &::before {
    content: '';
    position: absolute;
    background: $secondary-color;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: hidden !important;
    z-index: -1;
    transform: translateX(-100%);
    transition: all 0.5s;
  }

  &:hover {
    color: white !important;

    &::before {
      transform: translateX(0);
    }
  }


}

#showcase {
  height: 100vh;
  background: url('../img/bg.jpeg') center center/cover no-repeat;

  .showcase-content {
    background: rgba(0, 0, 0, 0.4);
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;


    h1 {
      animation-duration: 2s;
      animation-name: bounceIn;
      font-size: 4rem;
    }

    h2 {
      animation-duration: 2s;
      animation-name: bounceIn;
      font-size: 2rem;
    }

  }
}

#icons {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;

  .item {
    min-width: 300px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    background: #15191C;
    color: white;
    flex: 1;

    i {
      font-size: 5rem;
      color: $primary-color-alt;
      margin-top: 5rem;
      margin-bottom: 3rem;
    }

    .fa-heart {
      animation: .8s infinite heartBeat;
    }

    h1 {
      margin-bottom: 1rem;
    }

    p {
      padding: 0 2rem;
      margin-bottom: 2rem;
    }

    &:nth-child(even) {
      color: black;
      background: $primary-color-alt;

      i {
        color: #15191C;
      }

      .overlay {
        background: #15191C;


        .overlay-content {
          color: white;

          .book {
            background: $primary-color;
            color: black;
          }
        }
      }
    }

    &:hover .overlay {
      bottom: 0;
      height: 100%;
    }


    .overlay {
      z-index: 1;
      position: absolute;
      left: 0;
      bottom: 100%;
      right: 0;
      overflow: hidden;
      width: 100%;
      height: 0%;
      transition: 0.3s ease-in;
      background: $primary-color-alt;


      .overlay-content {
        transition: .5s;
        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        color: black;

        .book {
          background: #15191C;
          color: white;

        }
      }
    }
  }
}

.container {
  max-width: 1100px;
  margin: auto;
  padding: 0 2rem;
  overflow: hidden;
}

#about {
  .container {

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    h1 {
      padding: 3rem 0;
    }

    p {
      padding: 1rem;
      line-height: 1.5;
    }
  }
}

#youtube {
  width: 100%;
  height: 50vh;
  margin: 3rem 0;
  background: url('../img/1.jpg') center center/cover no-repeat;
  position: relative;
  overflow: hidden;


  .overlay {
    background: rgba(0, 0, 0, 0.4);
    // transform: skew(30deg, 30deg);
    position: absolute;
    opacity: 0;
    top: 0;
    height: 10%;
    width: 100%;
    right: 0;
    left: 0;

    .overlay-content {
      height: 100%;
      display: flex;
      justify-content: center;
      flex-direction: column;
      align-items: center;
      color: white;
      transition: all 0.7s;

    }
  }

  &:hover .overlay {
    opacity: 1;
    height: 100%;
    width: 100%;
    transition: all 0.7s;

    .overlay-content {
      // transform: skew(-30deg, -30deg);

      .book,
      h1 {
        transition: all 0.8s;
        transition-delay: 0.3s;
        transform: scale(1.2);
        margin: 1rem 0;
      }
    }

  }

}
/* ... */

